# thiscord

./: .gitignore  .gitmodules  Cargo.toml  Todo.md  requirements-ci.txt  thiscord.code-workspace
.github/workflows/: publish.yml
backend/: .gitignore  Cargo.toml  diesel.toml
backend/benches/: auth_bench.rs
backend/migrations/2025-05-19-211505_user/: down.sql  up.sql
backend/migrations/2025-05-21-173604_activation/: down.sql  up.sql
backend/migrations/2025-05-31-140851_servers/: down.sql  up.sql
backend/migrations/2025-05-31-150036_channels/: down.sql  up.sql
backend/migrations/2025-05-31-150102_permissions/: down.sql  up.sql
backend/migrations/2025-06-14-103838_image_path_update/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/auth/: auth.rs  web.rs
backend/src/channels/: backend.rs  mod.rs  web.rs
backend/src/err/: mod.rs
backend/src/models/: channels.rs  mod.rs  permissions.rs  servers.rs  user.rs
backend/src/rooms/: mod.rs  web.rs
backend/src/servers/: backend.rs  mod.rs  web.rs
backend/src/utils/: err.rs  gmail.rs  images.rs  mod.rs  turn.rs
backend/src/websocket/: web.rs
backup/: audio_example.rs
coturn/: docker-compose.yml
frontend/: .taurignore  Cargo.toml  Trunk.toml  index.html  stylance.css  styles.css
frontend/front-shared/: Cargo.toml  diesel.toml
frontend/front-shared/migrations/2025-06-09-141933_session/: down.sql  up.sql
frontend/front-shared/migrations/2025-06-30-114826_username-to-session/: up.sql
frontend/front-shared/migrations/2025-07-11-120513_lastused_audio_devices/: up.sql
frontend/front-shared/migrations/2025-07-16-074953_per-user-boost/: down.sql  up.sql
frontend/front-shared/migrations/2025-07-24-193208_audio_config/: down.sql
frontend/front-shared/src/: audio.rs  lib.rs  login.rs  schema.rs  status.rs  update.rs
frontend/front-shared/src/audio/: last_used_devices.rs
frontend/front-shared/src/models/: audio_config.rs  last_used_devices.rs  mod.rs  session.rs  user_boost.rs
frontend/shared/: Cargo.toml
frontend/shared/src/: lib.rs
frontend/src/: app.rs  home.rs  main.rs
frontend/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/migrations/2025-06-09-141933_session/: up.sql
frontend/src-tauri/migrations/2025-06-30-114826_username-to-session/: down.sql
frontend/src-tauri/migrations/2025-07-11-120513_lastused_audio_devices/: down.sql  up.sql
frontend/src-tauri/migrations/2025-07-24-193208_audio_config/: up.sql
frontend/src-tauri/src/: lib.rs  main.rs  schema.rs
frontend/src-tauri/src/audio/: audio.rs  mod.rs  tauri.rs
frontend/src-tauri/src/commands/: audio.rs  channels.rs  login.rs  misc.rs  mod.rs  server.rs  ws.rs
frontend/src-tauri/src/models/: audio_config.rs  last_used_devices.rs  mod.rs  session.rs  user_boost.rs
frontend/src-tauri/src/room/: tauri.rs
frontend/src-tauri/src/utils/: err.rs  login.rs  mod.rs  update.rs
frontend/src-tauri/src/websocket/: mod.rs
frontend/src/home/: channels.css  channels.rs  create_server.rs  home.css  lefticon.rs  leftpanel.rs  login.css  login.rs  mod.rs  settings.css  settings.rs  status.css  status.rs
frontend/src/home/server/: channels.rs  mod.rs  server.css
frontend/src/server/: channels.css  channels.rs  mod.rs  server.css
frontend/src/utils/: dropdown.css  dropdown.rs  hover_menu.css  hover_menu.rs  mod.rs  popup.css  popup.rs
my_web_rtc/: Cargo.toml
my_web_rtc/src/: lib.rs  my_web_rtc.rs
partial_modify_derive/: Cargo.toml
partial_modify_derive/src/: lib.rs
shared/: Cargo.toml  diesel.toml
shared/src/: lib.rs
shared/src/models/: channels.rs  mod.rs  permissions.rs  servers.rs  turn.rs  user.rs
shared/src/notwasm/: my_web_rtc.rs
sslcert/: cert.crt  cert.csr  cert.pem  key.pem
