cargo-features = ["profile-rustflags"]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart", "ws"] }
axum-extra = "0.10.1"
axum-login = "0.17.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
diesel = { version = "2.2.11", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
lettre = { version = "0.11", features = ["tokio1-native-tls", "pool"] }
r2d2 = "0.8.10"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["io-util", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["limit", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
shared = { path = "../shared", features = ["diesel"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
futures-util = "0.3.31"
ringbuf = "0.4.8"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
tokio-util = { version = "0.7.15", features = ["io"] }
strum = "0.27"
strum_macros = "0.27"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }

# [dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "auth_bench"
harness = false

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[profile.bench]
debug = true