[package]
name = "thiscord-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
uuid = { version = "1.17.0", features = ["js", "serde", "v4"] }
shared = { path = "./shared" }
stylance = { version = "0.6.0", features = ["nightly"] }
web-sys = { version = "0.3.77", features = ["DomRect", "Element"] }

[workspace]
members = ["src-tauri"]

[package.metadata.stylance]
output_file = "./stylance.css"
extensions = [".scss", ".css", ".module.scss", ".module.css"]
