[package]
name = "thiscord-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
uuid = { version = "1.17.0", features = ["js", "serde", "v4"] }
front-shared = { path = "./front-shared" }
stylance = { version = "0.6.0", features = ["nightly"] }
web-sys = { version = "0.3.77", features = ["DomRect", "Element", "FileList", "HtmlInputElement", "File", "Clipboard", "Navigator"] }
shared = { path = "../shared", default-features = false}
gloo-timers = { version = "0.3.0", features = ["futures"] }
    
[workspace]
members = ["src-tauri"]

[package.metadata.stylance]
output_file = "./stylance.css"
extensions = [".scss", ".css", ".module.scss", ".module.css"]
