[package]
name = "thiscord"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thiscord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
chrono = { version = "0.4.39", features = ["serde"] }
shared = {path = "../../shared"}
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "2.0.12"
cpal = "0.15.3"
ringbuf = "0.4.8"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
front-shared = { path = "../front-shared" }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
native-tls = "0.2.14"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["cookies", "rustls-tls", "stream", "json", "multipart"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
webrtc-audio-processing = { path = "../../webrtc-audio-processing", version = "0.6.0", features = ["bundled", "derive_serde", "serde"] }
webrtc-vad = "0.4.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
